# Nonhomogeneous-Sampling

./: README.md  compile_run_program.sh
check/: LP.csv  LPModel_Rod.jl  LP_Cox.jl  Nonlinear_Stat_Test.jl  comparison.py  lp_check.py  uniform_uniform.csv  volfrac.py
csv/: flux_constant.csv  flux_cox_exponential.csv  flux_cox_gaussian.csv  flux_cox_uniform.csv  flux_cox_uniform_full.csv  flux_cox_uniform_monosample.csv  flux_linear.csv  one_realization.csv
csv/LPData/: LPModelRod_Prob0_MCLOrder0.ultra  LPModelRod_Prob0_MCLOrder0_0.csv  LPModelRod_Prob0_MCLOrder0_1.csv  LPModelRod_Prob0_MCLOrder0_2.csv  LPModelRod_Prob0_MCLOrder0_6.csv  LPModelRod_Prob0_MCLOrder0_7.csv  LPModelRod_Prob0_MCLOrder1.ultra  LPModelRod_Prob0_MCLOrder1_0.csv  LPModelRod_Prob0_MCLOrder1_1.csv  LPModelRod_Prob0_MCLOrder1_2.csv  LPModelRod_Prob0_MCLOrder1_3.csv  LPModelRod_Prob0_MCLOrder2.ultra  LPModelRod_Prob0_MCLOrder2_0.csv  LPModelRod_Prob0_MCLOrder2_1.csv  LPModelRod_Prob0_MCLOrder2_2.csv  LPModelRod_Prob0_MCLOrder2_4.csv  LPModelRod_Prob0_MCLOrder2_5.csv  LPModelRod_Prob1_MCLOrder0.ultra  LPModelRod_Prob1_MCLOrder0_0.csv  LPModelRod_Prob1_MCLOrder0_1.csv  LPModelRod_Prob1_MCLOrder0_2.csv  LPModelRod_Prob1_MCLOrder0_3.csv  LPModelRod_Prob1_MCLOrder1.ultra  LPModelRod_Prob1_MCLOrder1_0.csv  LPModelRod_Prob1_MCLOrder1_1.csv  LPModelRod_Prob1_MCLOrder1_2.csv  LPModelRod_Prob1_MCLOrder2.ultra  LPModelRod_Prob1_MCLOrder2_0.csv  LPModelRod_Prob1_MCLOrder2_1.csv  LPModelRod_Prob1_MCLOrder2_2.csv  LPModelRod_Prob1_MCLOrder2_3.csv  LPModelRod_Prob1_MCLOrder2_6.csv  LPModelRod_Prob1_MCLOrder2_7.csv  LPModelRod_Prob2_MCLOrder0.ultra  LPModelRod_Prob2_MCLOrder0_0.csv  LPModelRod_Prob2_MCLOrder0_1.csv  LPModelRod_Prob2_MCLOrder0_2.csv  LPModelRod_Prob2_MCLOrder1.ultra  LPModelRod_Prob2_MCLOrder1_0.csv  LPModelRod_Prob2_MCLOrder1_1.csv  (+24 more)
img/: geometry_time.txt
plot/: comparison_plot.py  one_realization_plot.py  overlay_plot.py  plot.py  plot_all.py  rel_err_plot.py
src/: CMakeLists.txt  analytical.h  config.h.in  constants.h  cox_full_converge.h  driver.c  exponential_cox_geometry_gen.h  exponential_cox_geometry_gen_monosample.h  gaussian_cox_geometry_gen.h  gaussian_cox_geometry_gen_monosample.h  geometry_gen.h  geometry_time.h  legendre_gauss.h  linear_chord.h  linear_geometry_gen.h  linear_geometry_gen_rejection.h  linspace.h  meshmap.h  piecewise_constant_chord.h  piecewise_constant_geometry_gen.h  piecewise_constant_geometry_gen_rejection.h  piecewise_constant_quad_chord.h  piecewise_constant_quad_geometry_gen.h  piecewise_constant_quad_geometry_gen_rejection.h  pure_abs.h  quad_chord.h  quad_geometry_gen_rejection.h  running_statistics.h  s2.h  uniform_cox_geometry_gen.h  uniform_cox_geometry_gen_monosample.h  volume_fraction.h
